gcc/testsuite/g++.dg/diagnostic/main1.C
int main __attribute__((unused));  // { dg-error "5:cannot declare" }
